# ThreatLens

./: .env.example  .gitignore  README.md  REPRODUCIBILITY.md
.github/workflows/: ci.yml
Rapport/: template.tex
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_add_dynamic_analysis_fields.py  002_roadmap_enrichment_fields.py  003_add_static_score.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  deps.py  diff.py  findings.py  health.py  projects.py  reports.py  scans.py
backend/app/core/: __init__.py  config.py  database.py  security.py  storage.py
backend/app/engines/: __init__.py  attack_paths.py  jira_client.py  llm_dedup.py  llm_remediation.py  llm_triage.py  mobsf_client.py  sbom.py
backend/app/mapping/: __init__.py  cvss_scorer.py  fingerprint.py  masvs_mapper.py
backend/app/models/: models.py  (+2 more)
backend/scripts/: rerun_remediation.py
backend/tests/: test_masvs_mapper.py  test_step2.py  test_step4.py  test_step5b.py  test_step5c.py
benchmark/: audit_logs.csv  data.csv  generate_step5_step6.py  ground_truth.json  masvs_map.json  report_step8.py  run_benchmark.py  run_comparison.sh  run_real_benchmark.py
benchmark/results/: summary.csv
cli/: pyproject.toml
cli/masvs_cli/: __init__.py  client.py  main.py
cli/masvs_cli/commands/: __init__.py
cli/masvs_cli/output/: __init__.py
docs/: ARCHITECTURE.md
docs/rapport/: main.tex  references.bib
frontend/: Dockerfile  package-lock.json
infra/: docker-compose.yml  github-action.yml
(+42 files in other folders)
